# arbor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index10.html  index2.html  index3.html  index4.html  index9.html
docs/design/mockups/: 01-initial.html  05-concept-rich-sidebar.html  06-collapsible-groups.html  07-timeline-rail.html  08-everforest-trunk.html  11-native-macos.html
docs/design/plans/: 2026-03-24-multi-repo-support.md  2026-03-31-promote-demote.md
docs/design/specs/: 2026-03-24-control-panel-redesign-design.md  2026-03-26-uat-harness-design.md  2026-03-31-plan-a-features-design.md  2026-03-31-promote-demote-design.md
docs/superpowers/plans/: 2026-03-24-control-panel-redesign.md  2026-03-26-multi-repo-recursive.md  2026-03-26-uat-harness.md  2026-03-31-plan-a-features.md  2026-03-31-plan-b-visual-refresh.md  2026-03-31-promote-demote.md
docs/superpowers/specs/: 2026-03-24-control-panel-redesign-design.md  (+5 more)
src/: app.rs  discovery.rs  github.rs  keys.rs  lib.rs  main.rs  persistence.rs
src/pty/: session.rs
src/ui/: control_panel.rs  mod.rs  sidebar.rs  terminal.rs  theme.rs
src/worktree/: manager.rs  mod.rs  status.rs
src/zellij/: mod.rs  sessions.rs
tests/: app_archive_dialog.rs  app_autosize.rs  app_create_dialog.rs  app_drag.rs  app_mouse.rs  app_mouse_capture.rs  app_multi_repo.rs  app_paste.rs  app_pty_bounds.rs  app_scroll.rs  app_status.rs  discovery.rs  github.rs  keys.rs  persistence.rs  pty_activity.rs  worktree_manager.rs  worktree_repo_fields.rs  zellij_sessions.rs
tests/common/: mod.rs
uat/: harness.sh  run_tests.sh
