[package]
name = "arbor"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = "0.19"
portable-pty = "0.8"
vt100-ctt = { version = "0.17", default-features = false }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
